5.11.0
NEW
    - Added more info to bag and guild micromenu icons

FIXES
    - Fix some gossip skin issues
    - Module buttons are not inactive anymore

5.10.0
NEW
    - Added socket frame skin
    - Added layout and functions to money tooltip (bags)
    - Immersive Questing: Right click to go one gossip back
    - Immersive Questing: Accept quest with space
    - Added worldmap skin
    - Added gossip skin
    - Added itemupgrade skin

FIXES
    - Objective tracker improvments
    - Focus frame invert is now working
    - Fix auto repair

5.9.1
FIXES
    - Torghast tooltip issue
    - Fix M+ timer overlapping (Thanks to Sethos)

5.9.0
NEW
    - Added "player frame in target frame style"
    - Immersive Questing: Trigger "Next Gossip" with space
    - Show cooldowns at bags and character correct by using our own cooldown system
    - Added toggle for player PvP indicator
    - Added "World Quest Addon"-Skin (embedded into objectives tracker)
    - Added option to invert target/focus frame
    - Immersive Questing: Now works with auto accepting quest addons like AAP
    - Added Ember Court to the objectives tracker (Big thanks to Belazor for all the testing)
    - Added Credits

FIXES
    - Update "Raid Debuffs"
    - Guild auto repair if not in guild
    - Gamemenu fixes to better interact with ElvUI
    - Immersive Questing: "Ignore"-Button now only shows if applicable

5.8.0
NEW
    - Added Talent Set Manager support (button on hero panel)
    - Button flyout direction is based on actionbar screen position

FIXES
    - Fix castbar latency issue
    - Fix rested expbar issue
    - Fix inactive factions listed under classic and others
    - Fix Postal skin issue
    - Update "Raid Debuffs"
    - Possible fix for chatframe floating max error

5.7.5
FIXES
    - Fix chatframe fade
    - Update party portraits correctly
    - Fix arena headers
    - Fix keybind slash command
    - Fix arena prep frames overlaps with quests

5.7.4
FIXES
    - Fix some castbar issues